# neuropong

./: Cargo.toml  README.md  initial_prompt.txt  main.py  pyproject.toml  test.py
agents/: brian.py  main.py
src/: game.rs  lib.rs  testgame.rs
