[package]
name = "neuropong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "neuropong"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module", "abi3-py38"] }
ggez = "0.9.3"
mint = "0.5"
rand = "0.8.5"

[build-dependencies]
pyo3-build-config = "0.19.2"